# mc-qqbot-next

./: .env  .env.dev  .env.prod  .env.test  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: docker-image.yml
mc_qqbot_next/plugins/mc_qqbot_next/: __init__.py  bot.py  config.py  dependencies.py  docker.py  log.py  mc.py  permission.py  rules.py  server_to_group.py
mc_qqbot_next/plugins/mc_qqbot_next/commands/: __init__.py  echo.py
mc_qqbot_next/plugins/mc_qqbot_next/commands/mc/: __init__.py  ban.py  banlist.py  list.py  ping.py  reply_say.py  restart.py  say.py  unban.py  whitelist.py
mc_qqbot_next/plugins/mc_qqbot_next/db/: crud.py  model.py
mc_qqbot_next/plugins/mc_qqbot_next/db/crud/: __init__.py  binding.py  message.py
migrations/versions/: 9184f669f130_first_revision.py  91fc7bca2d32_add_create_time_for_message_target.py  e9f78ad5efa2_first_revision.py
tests/: common_permission_test.py  conftest.py  docker_mc_mocks.py  onebot_bot_mock.py  onebot_fake_send.py  onebot_message_factory.py  onebot_mock_send.py  onebot_simple_bot_mock.py  onebot_utils.py  test_ban.py  test_banlist.py  test_command_target.py  test_database.py  test_extract_arg_and_target.py  test_mc_commands.py  test_mc_utils.py  test_ping.py  test_restart.py  test_say.py  test_server_to_group.py  test_unban.py  test_whitelist.py
