[project]
name = "mc-qqbot-next"
version = "0.3.4"
description = "QQ bot for managing Minecraft servers running in docker, and more"
readme = "README.md"
requires-python = ">=3.12, <4.0"

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" }
]
plugins = ["nonebot_plugin_apscheduler"]
plugin_dirs = ["mc_qqbot_next/plugins"]
builtin_plugins = []

[tool.poetry]
name = "mc-qqbot-next"
version = "0.3.4"
description = "QQ bot for managing Minecraft servers running in docker, and more"
authors = ["xyqyear <xyqyear@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
nonebot2 = {extras = ["fastapi"], version = "^2.3.3"}
nb-cli = "^1.4.2"
nonebot-adapter-onebot = "^2.4.6"
setuptools = "^75.2.0"
minecraft-docker-manager-lib = {git = "https://github.com/xyqyear/minecraft-docker-manager-lib", rev = "v0.1.9"}
nonebot-plugin-apscheduler = "^0.5.0"
nonebot-plugin-orm = {extras = ["sqlite"], version = "^0.7.6"}
aiohttp = "^3.10.10"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[tool.poetry.group.test.dependencies]
nonebug = "^0.4.1"
pytest-asyncio = "^0.24.0"
pytest-env = "^1.1.5"
pytest-cov = "^6.0.0"

[tool.pytest_env]
ENVIRONMENT = "test"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
addopts = "-vv --cov=mc_qqbot_next --cov-report=xml:cov.xml --cov-report=html:cov_html --cov-report=term-missing"
